# federate

./: .gitignore  CMakeLists.txt  README.md  license.txt
include/Federate/: Federate.h
test/: test.cpp
